--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Queen Angella",
+    "name": "😘KING KAVIYA😘",
     "description": "Queen Angella - Whatsapp Bot",
     "logo": "https://i.imgur.com/wvTMw09.jpg",
     "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
