--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "😘KING KAVIYA😘",
-    "description": "Queen Angella - Whatsapp Bot",
+    "description": "KING KAVIYA NEW WHATSAPP BOT😘",
     "logo": "https://i.imgur.com/wvTMw09.jpg",
     "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
     "repository": "https://github.com/SLKINGKAVIYA/queen-angella",
