--- a/app.json
+++ b/app.json
@@ -146,7 +146,7 @@
         "ALIVE_MESSAGE": {
             "description": "Customizable Alive Message! Use => default, to change back.",
             "required": false,
-            "value": "\n ```Queen Angella I Am Alive !!!```\n\n```Type``` *.menu* ```for commands```"
+            "value": "\n ```KING KAVIYA😍 I Am Alive !!!```\n\n```Type``` *.menu* ```for commands```"
         },
         "BAN_MESSAGE": {
             "description": "Customizable Ban Message! Use => default, to change back.",
